Refactoring application using annotation.